@@ -1,0 +1,5 @@
+.onAttach <- function(libname, pkgname){
+  message(paste("\nmpm version ", packageDescription("mpm")$Version, 
+          "\n", sep = ""))
+}
+
